# astrovideoguide_v3

./: .gitignore  CMakeLists.txt  LocCorr_new.old.tgz  README.md  binmorph.c  binmorph.h  cmdlnopts.c  cmdlnopts.h  ec_filter.h  fc_filter.h  fits.h  imagefile.c  imagefile.h  inotify.c  inotify.h  main.c  median.c  median.h
LocCorr/: CMakeLists.txt  DEBUG.log.analyze  FindFLYCAP.cmake  Readme.md  basler.c  basler.h  binmorph.c  binmorph.h  cameracapture.c  cameracapture.h  cclabling_ori.h  cmdlnopts.c  cmdlnopts.h  config.c  config.h  debug.h  dilation.h  draw.c  draw.h  fc_filter.h  fits.c  fits.h  grasshopper.c  grasshopper.h  imagefile.c  imagefile.h  improc.c  improc.h  inotify.c  loccorr.conf  main.c  median.c  median.h  pusirobo.c  pusirobo.h  socket.c
LocCorr/doc/: LCdoc.tex  spec_server.tex  webinterface.tex
LocCorr_new/: CANSERVER_pusirobo  CMakeLists.txt  Changelog  Readme.md  Toupcam.h  basler.c  basler.h  binmorph.c  binmorph.h  cameracapture.c  cameracapture.h  cclabling.h  cmdlnopts.c  cmdlnopts.h  config.c  config.h  debug.c  debug.h  dilation.h  draw.c  draw.h  ec_filter.h  fits.c  fits.h  grasshopper.c  grasshopper.h  hikrobot.c  hikrobot.h  imagefile.c  imagefile.h  improc.c  improc.h  inotify.c  inotify.h  loccorr.conf  main.c  median.c  socket.c  socket.h  stbimpl.c  (+3 more)
